--- a/iWork.Web.UI/iView/Contacts/ContactsUpdate.html
+++ b/iWork.Web.UI/iView/Contacts/ContactsUpdate.html
@@ -1,16 +1,16 @@
-﻿<layout>
+﻿<!--<layout>
     <content>
         <view iv-type="row">
             <view iv-type="column" iv-size="4">
                 <form iv-type="form" iv-name="loginForm" iv-title="contactformadd" iv-controller="Authentication" iv-redirecturl="default">
                     <fieldset>
-                        <input iv-type="text" iv-name="fullname" iv-model="contact" />
-                        <input iv-type="text" iv-name="tel1" iv-model="contact" />
-                        <input iv-type="text" iv-name="tel2" iv-model="contact" />
-                        <input iv-type="text" iv-name="tel3" iv-model="contact" />
-                        <input iv-type="text" iv-name="tel4" iv-model="contact" />
-                        <input iv-type="text" iv-name="company" iv-model="company" />
-                        <input iv-type="text" iv-name="unit" iv-model="unit" />
+                        <input iv-type="text" iv-name="fullname" iv-model="ivContact" />
+                        <input iv-type="text" iv-name="tel1" iv-model="ivContact" />
+                        <input iv-type="text" iv-name="tel2" iv-model="ivContact" />
+                        <input iv-type="text" iv-name="tel3" iv-model="ivContact" />
+                        <input iv-type="text" iv-name="tel4" iv-model="ivContact" />
+                        <input iv-type="text" iv-name="company" iv-model="ivContact" />
+                        <input iv-type="text" iv-name="unit" iv-model="ivContact" />
                         <input iv-type="text" iv-name="description" iv-model="description" />
                         <button iv-type="submit" iv-name="submit" />
                     </fieldset>
@@ -29,7 +29,7 @@
         </model>
     </models>
     <controllers>
-        <controller name="Contact" action="update" requestmodel="contact" responsemodel="updateResult">
+        <controller name="Contact" action="update" requestmodel="ivContact" responsemodel="ivUpdateResult">
         </controller>
     </controllers>
-</api>
+</api>-->
