--- a/iWork.Web.UI/iView/Contacts/ContactsAdd.html
+++ b/iWork.Web.UI/iView/Contacts/ContactsAdd.html
@@ -2,45 +2,21 @@
     <content>
         <view iv-type="row">
             <view iv-type="column" iv-size="4">
-                <form iv-type="form" iv-name="loginForm" iv-title="contactformadd" iv-controller="Contact" iv-action="add" >
+                <form iv-type="form" iv-name="loginForm" iv-title="Add New Contact" iv-controller="Contact" iv-action="add" iv-model="ivContact">
                     <fieldset>
-                        <input iv-type="text" iv-name="fullname" iv-model="contact" />
-                        <input iv-type="text" iv-name="tel1" iv-model="contact" />
-                        <input iv-type="text" iv-name="tel2" iv-model="contact" />
-                        <input iv-type="text" iv-name="tel3" iv-model="contact" />
-                        <input iv-type="text" iv-name="tel4" iv-model="contact" />
-                        <input iv-type="text" iv-name="company" iv-model="company" />
-                        <input iv-type="text" iv-name="unit" iv-model="company" />
-                        <input iv-type="text" iv-name="description" iv-model="company" />
-                        <button iv-type="submit" iv-name="submit" />
+                        <input iv-type="text" iv-name="fullname" iv-label="Fullname" />
+                        <input iv-type="text" iv-name="tel1" iv-label="Home" />
+                        <input iv-type="text" iv-name="tel2" iv-label="Mobile" />
+                        <input iv-type="text" iv-name="tel3" iv-label="Office" />
+                        <input iv-type="text" iv-name="tel4" iv-label="Fax" />
+                        <input iv-type="text" iv-name="company" iv-label="Company" />
+                        <input iv-type="text" iv-name="unit" iv-label="Unit" />
+                        <input iv-type="text" iv-name="description" iv-label="Description" />
+                        <button iv-type="submit" iv-name="submit" iv-label="Submit" />
                     </fieldset>
-                    <result>
-                        <view iv-type="error"></view>
-                        <view iv-type="success"></view>
-                    </result>
                 </form>
             </view>
         </view>
     </content>
 </layout>
-<api>
-    <models>
-        <model name="contact">
-            <property name="id" type="integer"></property>
-            <property name="fullname" type="string"></property>
-            <property name="tel1" type="string"></property>
-            <property name="tel2" type="string"></property>
-            <property name="tel3" type="string"></property>
-            <property name="tel4" type="string"></property>
-            <property name="company" type="string"></property>
-            <property name="unit" type="string"></property>
-            <property name="description" type="string"></property>
-        </model>
-        <model name="addResult">
-        </model>
-    </models>
-    <controllers>
-        <controller name="Contact" action="add" requestmodel="contact" responsemodel="addResult">
-        </controller>
-    </controllers>
-</api>
+
