--- a/iWork.Web.UI/iView/Contacts/ContactsAdd.html
+++ b/iWork.Web.UI/iView/Contacts/ContactsAdd.html
@@ -1,20 +1,20 @@
 ﻿<layout>
     <content>
         <view iv-type="row">
-                <form iv-type="form" iv-name="loginForm" iv-title="Add New Contact" iv-controller="Contact" iv-action="add" iv-model="ivContact">
-                    <fieldset>
-                        <input iv-type="text" iv-name="fullname" iv-label="Fullname" />
-                        <input iv-type="text" iv-name="tel1" iv-label="Home" />
-                        <input iv-type="text" iv-name="tel2" iv-label="Mobile" />
-                        <input iv-type="text" iv-name="tel3" iv-label="Office" />
-                        <input iv-type="text" iv-name="tel4" iv-label="Fax" />
-                        <input iv-type="text" iv-name="company" iv-label="Company" />
-                        <input iv-type="text" iv-name="unit" iv-label="Unit" />
-                        <input iv-type="text" iv-name="description" iv-label="Description" />
-                        <button iv-type="submit" iv-name="submit" iv-label="Submit" />
-                        <button iv-type="cancel" iv-name="cancel" iv-label="Cancel" />
-                    </fieldset>
-                </form>
+            <form iv-type="form" iv-redirecturl="/iView/Contacts/Contactslist.html" iv-name="loginForm" iv-title="Add New Contact" iv-controller="Contact" iv-action="add" iv-model="ivContact">
+                <fieldset>
+                    <input iv-type="text" iv-name="fullname" iv-label="Fullname" iv-required="true" />
+                    <input iv-type="text" iv-name="tel1" iv-label="Home" />
+                    <input iv-type="text" iv-name="tel2" iv-label="Mobile" iv-input-type="tel" />
+                    <input iv-type="text" iv-name="tel3" iv-label="Office" />
+                    <input iv-type="text" iv-name="tel4" iv-label="Fax" />
+                    <input iv-type="text" iv-name="company" iv-label="Company" />
+                    <input iv-type="text" iv-name="unit" iv-label="Unit" />
+                    <input iv-type="text" iv-name="description" iv-label="Description" />
+                    <button iv-type="submit" iv-name="submit" iv-label="Submit" />
+                    <button iv-type="cancel" iv-name="cancel" iv-label="Cancel" />
+                </fieldset>
+            </form>
         </view>
     </content>
 </layout>
