--- a/iWork.Web.UI/iView/Contacts/ContactsList.html
+++ b/iWork.Web.UI/iView/Contacts/ContactsList.html
@@ -1,10 +1,9 @@
 ﻿<layout>
     <content>
         <view iv-type="row">
-                <form iv-type="form" iv-name="searchForm" iv-title="Search Contact" iv-controller="Contact" iv-action="Search" iv-model="ivContactSearch">
+                <form iv-type="form" iv-name="searchForm" iv-controller="Contact" iv-action="Search" iv-model="ivContactSearch">
                     <fieldset>
-                        <input iv-type="text" iv-name="term" iv-label="Term" />
-                        <button iv-type="submit" iv-name="submit" iv-label="Submit" />
+                        <input iv-type="search" iv-name="term" iv-label="Search contatc" />
                     </fieldset>
                     <result>
                         <table class="table table-striped table-hover ">
