Implement Slick View
Add Svg Icons, Add Svg Injector

--- a/iWork.Web.UI/iView/Contacts/list.html
+++ b/iWork.Web.UI/iView/Contacts/list.html
@@ -15,19 +15,18 @@
                     iv-label="Search Contact"
                     iv-toggle="modal"
                     iv-target="#contactForm"
-                    iv-toggle="slik"
+                    iv-toggle="slick"
                     iv-target="0"></button>
             <button iv-type="iconic"
                     iv-toggle="modal"
                     iv-icon="add-user"
                     iv-target="#contactForm"
                     iv-label="Add Contact"
-                    iv-toggle="modal"
                     iv-target="#contactForm"
-                    iv-toggle="slik"
+                    iv-toggle="slick"
                     iv-target="1"></button>
 
-            <div class="slik-container">
+            <div class="slick-container">
                 <div>
                     <form iv-type="form" iv-name="searchForm" iv-controller="Contact" iv-model="Contact" iv-action="Search" iv-show-message="false">
                         <fieldset>
