--- a/iWork.Web.UI/iView/Contacts/list.html
+++ b/iWork.Web.UI/iView/Contacts/list.html
@@ -54,7 +54,7 @@
                                 <td>{{ x.Tel4 }}</td>
                                 <td>{{ x.Description }}</td>
                                 <td>
-                                    <button iv-type="update" iv-model="Contact" iv-entity-id="{{x.ContactId}}" iv-toggle="modal" iv-target="#contactForm"></button>
+                                    <button iv-type="update" iv-model="Contact" iv-entity-id="{{x.ContactId}}" iv-target-form="contactForm"></button>
                                 </td>
                                 <td>
                                     <button iv-type="delete" iv-model="Contact" iv-entity-id="{{x.ContactId}}" iv-confirm="true"> </button>
@@ -64,7 +64,7 @@
                     </grid>
                 </div>
                 <div>
-                    <form iv-type="form" iv-name="loginForm" iv-controller="Contact" iv-action="add" iv-model="ivContact" >
+                    <form iv-type="form" iv-name="contactForm" iv-controller="Contact" iv-action="add" iv-model="ivContact">
                         <fieldset>
                             <input iv-type="text" iv-name="fullname" iv-label="Fullname" iv-required="true" />
                             <input iv-type="text" iv-name="tel1" iv-label="Home" />
