Add Date/timepicker, Datatables

--- a/iWork.Web.UI/iView/Contacts/list.html
+++ b/iWork.Web.UI/iView/Contacts/list.html
@@ -1,20 +1,13 @@
 ﻿<layout>
     <sidecontent>
         <button iv-type="iconic"
-                iv-toggle="modal"
                 iv-icon="address-book"
-                iv-target="#contactForm"
                 iv-label="Search Contact"
-                iv-toggle="modal"
-                iv-target="#contactForm"
                 iv-toggle="slick"
                 iv-target="0"></button>
         <button iv-type="iconic"
-                iv-toggle="modal"
                 iv-icon="add-user"
-                iv-target="#contactForm"
                 iv-label="Add Contact"
-                iv-target="#contactForm"
                 iv-toggle="slick"
                 iv-target="1"></button>
     </sidecontent>
@@ -23,7 +16,7 @@
                 <div>
                     <form iv-type="form" iv-name="searchForm" iv-controller="Contact" iv-model="Contact" iv-action="Search" iv-show-message="false">
                         <fieldset>
-                            <input iv-type="search" iv-name="term" iv-label="Search contatc" />
+                            <input iv-autofocus="autofocus" iv-type="search" iv-name="term" iv-label="Search contact" />
                         </fieldset>
                     </form>
                     <grid iv-type="table" iv-controller="contactGrid" iv-observe="searchForm">
