--- a/iWork.Web.UI/iView/kitchensink/kitchensink.html
+++ b/iWork.Web.UI/iView/kitchensink/kitchensink.html
@@ -2,19 +2,52 @@
     <sidecontent>
         <button iv-type="iconic"
                 iv-icon="grid"
-                iv-label="Grid Datatables"
+                iv-label="Observer Grid"
                 iv-toggle="slick"
                 iv-target="0"></button>
+        <button iv-type="iconic"
+                iv-icon="grid"
+                iv-label="Ajax Grid"
+                iv-toggle="slick"
+                iv-target="1"></button>
         <button iv-type="iconic"
                 iv-icon="upload"
                 iv-label="File Uploader"
                 iv-toggle="slick"
-                iv-target="1"></button>
+                iv-target="2"></button>
     </sidecontent>
     <content>
         <div class="slick-container">
             <div>
-                <grid iv-type="datatables" iv-controller="sampleGrid" iv-url="/content/sample_data/grid.json" iv-ordering="true" iv-display-length="15" iv-serverside="false">
+
+                <form iv-type="form" iv-title="Observer gird example" iv-name="contactSearchForm" iv-controller="Contact" iv-model="Contact" iv-action="Search" iv-show-message="false">
+                    <fieldset>
+                        <input iv-autofocus="autofocus" iv-type="search" iv-name="term" iv-label="Search contact" />
+                    </fieldset>
+                </form>
+
+                <grid iv-type="datatables"
+                      iv-controller="observerGrid"
+                      iv-observe="contactSearchForm"
+                      iv-ordering="true"
+                      iv-searching="false"
+                      iv-display-length="15"
+                      iv-serverside="false">
+                    <grid iv-type="column" iv-title="Contact Id" iv-data="ContactId" iv-atargets="0"></grid>
+                    <grid iv-type="column" iv-title="Full name" iv-data="Fullname" iv-atargets="1"></grid>
+                    <grid iv-type="column" iv-title="Gender" iv-data="Gender" iv-atargets="2"></grid>
+                    <grid iv-type="column" iv-title="Tel 1" iv-data="Tel1" iv-atargets="3"></grid>
+                    <grid iv-type="column" iv-title="Tel 2" iv-data="Tel2" iv-atargets="4"></grid>
+                    <grid iv-type="column" iv-title="Tel 3" iv-data="Tel3" iv-atargets="5"></grid>
+
+                    <grid iv-type="column" iv-title="Edit button" iv-kind="btn.edite" iv-atargets="6" iv-width="100"></grid>
+                    <grid iv-type="column" iv-title="Delete button" iv-kind="btn.delete" iv-atargets="7" iv-width="100"></grid>
+                </grid>
+
+            </div>
+
+            <div>
+                <grid iv-type="datatables" iv-title="Ajax Grid" iv-controller="sampleGrid" iv-url="/content/sample_data/grid.json" iv-ordering="true" iv-display-length="15" iv-serverside="false">
                     <grid iv-type="column" iv-title="Name" iv-data="name" iv-atargets="0"></grid>
                     <grid iv-type="column" iv-title="Position" iv-data="position" iv-atargets="1"></grid>
                     <grid iv-type="column" iv-title="salary" iv-data="salary" iv-atargets="2"></grid>
@@ -25,10 +58,9 @@
                     <grid iv-type="column" iv-title="Delete button" iv-kind="btn.delete" iv-atargets="7" iv-width="100"></grid>
                 </grid>
             </div>
-            
 
             <div>
-                <form iv-type="form" iv-name="searchForm" iv-controller="Contact" iv-model="Contact" iv-action="Search" iv-show-message="false">
+                <form iv-type="form" iv-name="searchForm" iv-controller="Contact" iv-model="Contact" iv-action="add" iv-show-message="false">
                     <input iv-type="text" iv-name="fullname" iv-label="Fullname" iv-required="true" />
                     <input iv-type="text" iv-name="tel1" iv-label="Home" />
                     <datepicker iv-type="time" iv-label="Timepicker"></datepicker>
@@ -37,6 +69,7 @@
                     <button iv-type="submit" iv-name="submit" iv-label="Submit" />
                 </form>
             </div>
+
         </div>
     </content>
 </layout>
