Add done button to form

--- a/iWork.Web.UI/iView/Contacts/list.html
+++ b/iWork.Web.UI/iView/Contacts/list.html
@@ -69,6 +69,7 @@
                             <input iv-type="text" iv-name="description" iv-label="Description" />
                             <button iv-type="submit" iv-name="submit" iv-label="Submit" />
                             <button iv-type="cancel" iv-name="cancel" iv-label="Reset" />
+                            <button iv-type="done" iv-name="done" iv-label="Done" />
                         </fieldset>
                     </form>
                 </div>
